# example_download_gtest_gmock_project

./: CMakeLists.txt  DownloadGTestGMock.cmake  GTestGMock.CMakeLists.cmake.in
include/: big_formula_factory.hpp  formula_factory.hpp  i_big_formula.hpp  i_formula.hpp
src/impl/: big_formula.cpp  big_formula_factory.cpp  formula.cpp  formula_factory.cpp  main.cpp
src/incl/: big_formula.hpp  formula.hpp
test/: CMakeLists.txt  big_formula_test.cpp  formula_test.cpp
test/mocks_include/: mock_big_formula.hpp  mock_formula.hpp
